# dqf

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  tag-release.yml
api/: index.html
api/adapters/: index.html
api/checks/: index.html
api/checks/cross_sectional/: index.html
api/checks/longitudinal/: index.html
api/checks/pipeline/: index.html
api/datasets/: index.html
api/defaults/: index.html
api/enums/: index.html
api/report/: index.html
api/resolver/: index.html
api/results/: index.html
api/variable/: index.html
changelog/: index.html
concepts/: index.html
design/: index.html
docs/: concepts.md  design.md  index.md  plan_02_core_primitives.md  plan_03_variable.md  plan_04_adapters.md  plan_05_metadata.md  plan_06_checks.md  plan_07_resolver.md  plan_08_datasets.md  plan_09_orchestration.md  plan_10_cross_sectional_checks.md  plan_11_longitudinal_checks.md  plan_12_report.md  plan_13_defaults.md  plan_14_integration_examples.md  plan_15_packaging_docs.md
docs/api/: adapters.md  datasets.md  defaults.md  enums.md  index.md  report.md  resolver.md  results.md  variable.md
docs/api/checks/: cross_sectional.md  index.md  longitudinal.md  pipeline.md
docs/examples/: 01_basic_validation.md  02_longitudinal_validation.md  03_custom_resolver.md  04_target_drift.md
dqf/: __init__.py
examples/: 01_basic_validation.py  02_longitudinal_validation.py  03_custom_resolver.py  04_target_drift.py  05_databricks_notebook.ipynb
examples/01_basic_validation/: index.html
examples/02_longitudinal_validation/: index.html
examples/03_custom_resolver/: index.html
examples/04_target_drift/: index.html
plan_02_core_primitives/: index.html
plan_03_variable/: index.html
plan_04_adapters/: index.html
plan_05_metadata/: index.html
plan_06_checks/: index.html
plan_07_resolver/: index.html
plan_08_datasets/: index.html
plan_09_orchestration/: index.html
plan_10_cross_sectional_checks/: index.html
plan_11_longitudinal_checks/: index.html
plan_12_report/: index.html
plan_13_defaults/: index.html
plan_14_integration_examples/: index.html
plan_15_packaging_docs/: index.html
search/: search_index.json
src/dqf/: __init__.py  config.py  enums.py  report.py  resolver.py  results.py  variable.py
src/dqf/adapters/: __init__.py  base.py  databricks_adapter.py  databricks_notebook_adapter.py  mock_adapter.py  spark_adapter.py  sqlalchemy_adapter.py
src/dqf/checks/: __init__.py  base.py  pipeline.py
src/dqf/checks/cross_sectional/: __init__.py  allowed_values.py  cardinality_check.py  not_null.py  null_rate.py  outlier.py  range_check.py  referential_integrity.py  regex_pattern.py  uniqueness.py
src/dqf/checks/longitudinal/: __init__.py  chisquared_drift.py  concept_drift.py  distribution_drift.py  figures.py  ks_drift.py  proportion_drift.py  seasonality.py  structural_break.py  trend.py
src/dqf/datasets/: __init__.py  universe.py  variables.py
src/dqf/defaults/: __init__.py  metadata.py  suites.py
src/dqf/metadata/: __init__.py  base.py  resolver.py
src/dqf/metadata/builders/: __init__.py  cardinality_builder.py  distribution_builder.py  dtype_builder.py  nullability_builder.py  semantic_builder.py
tests/: conftest.py  test_adapters.py  test_checks.py  test_cross_sectional.py  test_cross_sectional_checks.py  test_datasets.py  test_default_suites.py  test_enums.py  test_figures.py  test_integration.py  test_longitudinal.py  test_longitudinal_checks.py  test_metadata.py  test_new_checks.py  test_orchestration.py  test_report.py  test_resolver.py  test_results.py  test_run_validation.py  test_variable.py
