[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqf"
version = "0.1.0"
description = "Data Quality Framework — composable, pipeline-based data quality validation for analytical datasets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Mirko" }]
keywords = ["data quality", "validation", "pipeline", "data engineering", "pyspark", "pandas"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
spark = ["pyspark>=3.4"]
databricks = ["databricks-sql-connector>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "hatch>=1.9",
]

[project.urls]
Repository = "https://github.com/Mirkiux/dqf"

[tool.hatch.build.targets.wheel]
packages = ["src/dqf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dqf --cov-report=term-missing"
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.coverage.run]
source = ["src/dqf"]